--- a/sorteo/templates/base.html
+++ b/sorteo/templates/base.html
@@ -43,9 +43,10 @@
     </nav>
 </header>
     {% block content %}{% endblock %}
-    <script src="{% static 'sorteo/js/main.js' %}"></script>
+    <script src="{% static '/js/payment.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    
     <footer class="bg-dark text-white py-3">
       <div class="container">
         <div class="row">
