--- a/sorteo/templates/sorteo/sorteo_list.html
+++ b/sorteo/templates/sorteo/sorteo_list.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container mt-5 mb-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <h1 class='text-light' >Lista de Sorteos</h1>
+        <h1 class='text-principal' >Lista de Sorteos</h1>
         <a href="{% url 'sorteo_create' %}" class="btn btn-primary">
             <i class="fas fa-plus me-1"></i> Crear Sorteo
         </a>
@@ -51,7 +51,7 @@
                     <tbody>
                         {% for sorteo in sorteos %}
                         <tr>
-                            <td><strong>{{ sorteo.title }}</strong><small class="d-block text-muted">Fecha: {{ sorteo.date_lottery|date:"d/m/Y" }}</small></td>
+                            <td><strong>{{ sorteo.title }}</strong><small class="d-block text-muted">Fecha: {{ sorteo.display_date }}</small></td>
                             <td><span class="badge {% if sorteo.state == 'A' %}bg-success{% elif sorteo.state == 'F' or sorteo.state == 'V' %}bg-secondary{% else %}bg-warning text-dark{% endif %}">{{ sorteo.get_state_display }}</span></td>
                             <td>{{ sorteo.tickets_solds }} / {{ sorteo.total_tickets }}</td>
                             <td>
@@ -63,8 +63,8 @@
                                 </div>
                             </td>
                             <td>
-                                <a href="{% url 'sorteo:ticket_list' sorteo.id %}" class="btn btn-sm btn-info" title="Ver Tickets"><i class="fas fa-ticket-alt"></i></a>
-                                <a href="{% url 'sorteo:sorteo_edit' sorteo.id %}" class="btn btn-sm btn-warning" title="Editar Sorteo"><i class="fas fa-edit"></i></a>
+                                <a href="{% url 'ticket_list' sorteo.id %}" class="btn btn-sm btn-info" title="Ver Tickets"><i class="fas fa-ticket-alt"></i></a>
+                                <a href="{% url 'sorteo_edit' sorteo.id %}" class="btn btn-sm btn-warning" title="Editar Sorteo"><i class="fas fa-edit"></i></a>
                             </td>
                         </tr>
                         {% empty %}
